# flint3-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
bindgen/: extern.c  flint.rs  flintextern.c  types.rs
src/: ffi_prelude.rs  lib.rs
tests/: aks.rs  bernoulli.rs  class_poly.rs
