[package]
name = "flint3-sys"
description = "Rust bindings to the FLINT C library"
version = "3.3.1"
repository = "https://github.com/lairez/flint3-sys"
edition = "2021"
links = "flint"
authors = ["Pierre Lairez"]
license = "MIT"
categories = ["external-ffi-bindings", "mathematics"]
keywords = ["computer-algebra"]

[features]
force-bindgen = ["dep:bindgen", "dep:regex"]
gmp-mpfr-sys = ["dep:gmp-mpfr-sys"]

[dependencies]
gmp-mpfr-sys = { version = "1.6.4", optional = true }

[build-dependencies]
anyhow = "1.0.98"
bindgen = { version = "0.72", optional = true }
cc = "1.2.23"
regex = { version = "1.11.1", default-features = false, features = ["std"], optional = true }

[package.metadata.docs.rs]
features = ["gmp-mpfr-sys"]     # docs.rs does not have libgmp-dev
