[package]
name = "flint3-sys"
description = "Rust bindings to the FLINT C library"
version = "3.5.0"
repository = "https://github.com/lairez/flint3-sys"
edition = "2021"
links = "flint"
authors = ["Pierre Lairez"]
license = "MIT"
categories = ["external-ffi-bindings", "mathematics"]
keywords = ["computer-algebra"]
build = "build/main.rs"

[features]
default = []
force-bindgen = ["dep:bindgen", "dep:regex", "dep:tempfile"]
gmp-mpfr-sys = ["dep:gmp-mpfr-sys"]
use-system-lib = ["dep:pkg-config"]

[dependencies]
gmp-mpfr-sys = { version = "1.7.1", optional = true }
libc = "0.2.186"

[build-dependencies]
anyhow = "1.0.98"
bindgen = { version = "0.72.1", optional = true }
cc = "1.2.23"
pkg-config = { version = "0.3", optional = true }
regex = { version = "1.11.1", default-features = false, features = ["std"], optional = true }
tempfile = {version = "3.27.0", optional = true }

[package.metadata.docs.rs]
features = ["gmp-mpfr-sys"]     # docs.rs does not have libgmp-dev
